objects/SFBD__CollectionsPlan__c.object
<CustomObject>
    <description>Collections Plans track collections activites and related invoices.</description>
    <fields>
        <fullName>SFBD__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account that is related to this Collections Plan</description>
        <inlineHelpText>Account associated with this Collections Plan</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collections Plans</relationshipLabel>
        <relationshipName>Collections_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFBD__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Collections Plan is related to a case, this lookup can be populated to reference it.</description>
        <inlineHelpText>Case that this Collections Plan is related to.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Collections Plans</relationshipLabel>
        <relationshipName>Collections_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFBD__CloseReason__c</fullName>
        <description>Reason that this Collections Plan was closed</description>
        <label>Close Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incorrect Billing</fullName>
                </value>
                <value>
                    <fullName>Customer Service Issue</fullName>
                </value>
                <value>
                    <fullName>Product Fit</fullName>
                </value>
                <value>
                    <fullName>Partner Issue</fullName>
                </value>
                <value>
                    <fullName>Send to Collections Agency</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFBD__CollectionsAgent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collections Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Collections_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFBD__CollectionsContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact that collection tasks are related to by default. Maps from the Account Bill To Contact.</description>
        <inlineHelpText>Contact that collection tasks are related to by default. Maps from the Account Bill To Contact.</inlineHelpText>
        <label>Collections Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Collections Plans</relationshipLabel>
        <relationshipName>Collections_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFBD__DaysOpen__c</fullName>
        <description>Difference between the Collections Plan Start Date and End Date if the plan has an end date. Otherwise the difference between the Plan Start Date and Today.</description>
        <formula>IF(ISBLANK(SFBD__StartDate__c), 0,
IF(ISBLANK(SFBD__EndDate__c), TODAY() - SFBD__StartDate__c, SFBD__EndDate__c - SFBD__StartDate__c))</formula>
        <inlineHelpText>Number of days this Collections Plan has been open</inlineHelpText>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFBD__DunningMethod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The associated Dunning Method that created this Collections Plan.</description>
        <inlineHelpText>The associated Dunning Method that created this Collections Plan.</inlineHelpText>
        <label>Dunning Method</label>
        <referenceTo>SFBD__DunningMethod__c</referenceTo>
        <relationshipLabel>Collections Plans</relationshipLabel>
        <relationshipName>Collections_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFBD__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFBD__InvoiceBalance__c</fullName>
        <description>Total balance of all invoices in collections at the start of this Collections Plan.</description>
        <inlineHelpText>Total balance of all invoices in collections at the start of this Collections Plan.</inlineHelpText>
        <label>Invoice Balance</label>
        <summarizedField>SFBD__CollectionsInvoice__c.SFBD__InvoiceBalance__c</summarizedField>
        <summaryForeignKey>SFBD__CollectionsInvoice__c.SFBD__CollectionsPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SFBD__Notes__c</fullName>
        <label>Notes</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SFBD__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFBD__Status__c</fullName>
        <description>Current status of this Collections Plan. &apos;Open&apos; is an active Collections Plan, &apos;Closed&apos; is an inactive Collections Plan.</description>
        <inlineHelpText>Current status of this Collections Plan. &apos;Open&apos; is an active Collections Plan, &apos;Closed&apos; is an inactive Collections Plan.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Collections Plan</label>
    <listViews>
        <fullName>SFBD__All</fullName>
        <columns>NAME</columns>
        <columns>SFBD__Account__c</columns>
        <columns>SFBD__Status__c</columns>
        <columns>SFBD__StartDate__c</columns>
        <columns>SFBD__EndDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Collections #{000000}</displayFormat>
        <label>Collections Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collections Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>